fix(theme): make links more readable
fixes #119

--- a/Phonebook.Frontend/src/app/shared/components/add-filter/add-filter.component.theme.scss
+++ b/Phonebook.Frontend/src/app/shared/components/add-filter/add-filter.component.theme.scss
@@ -1,15 +1,13 @@
 @import '~@angular/material/theming';
 
-@mixin add-filter-component-theme($theme) {
-  $primary: map-get($theme, primary);
-
+@mixin add-filter-component-color($color) {
   a {
     &:hover,
     &:active,
     &:focus {
       outline: none;
       .pb-c-text {
-        border-bottom: mat-color($primary) dashed;
+        border-bottom: $color dashed;
       }
     }
   }
